fix: fixed wrong colored part in background of mobile lightning divider

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -75,33 +75,12 @@ a {
   to {
     transform: translate3d(4px, 0, 0);
   }
-
-  /* 10%,
-  90% {
-    transform: translate3d(-1px, 0, 0);
-  }
-
-  20%,
-  80% {
-    transform: translate3d(2px, 0, 0);
-  }
-
-  30%,
-  50%,
-  70% {
-    transform: translate3d(-4px, 0, 0);
-  }
-
-  40%,
-  60% {
-    transform: translate3d(4px, 0, 0);
-  } */
 }
 
 @layer utilities {
   .clip-bg {
     clip-path: polygon(
-      min(17%, 240px) 0%,
+      min(19%, 240px) 0%,
       100% 0,
       100% 100%,
       0 100%,
@@ -109,10 +88,10 @@ a {
     );
   }
   .clip-bg-mobile {
-    clip-path: polygon(50% 50%, 100% -4%, 100% 100%, 0 100%, 0% 90%);
+    clip-path: polygon(50% 50%, 100% 23%, 100% 100%, 0 100%, 0% 90%);
   }
   .clip-nav {
-    clip-path: polygon(4rem 0, 100% 0, 100% 100%, 0% 100%);
+    clip-path: polygon(2rem 0, 100% 0, 100% 100%, 0% 100%);
   }
 
   .hover-animation {
